// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple.md - markdown-verify 1`] = `
![hello](http://example.com/image.png)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
![hello](http://example.com/image.png)

`;

exports[`title.md - markdown-verify 1`] = `
![hello](http://example.com/image.png "title")
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
![hello](http://example.com/image.png "title")

`;
